# lab04

./: README.md
.github/workflows/: blank.yml  test1.sh
examples/: hello_world.cpp
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt  hello_world.cpp
hello_world_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  hello_world
solver_application/: CMakeLists.txt
solver_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  solver_app
solver_lib/: CMakeLists.txt
solver_lib/.B_build/: CMakeCache.txt  Makefile  cmake_install.cmake
solver_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
