cmake_minimum_required(VERSION 3.4)
project(formatter)
set(CMAKE_CXX_STANDART 11)
set(CMAKE_CXX_STANDART_REQUIRED ON)
add_library(formatter STATIC /home/osboxes/NikAvto/workspace/reports/lab03/formatter_lib/formatter.cpp)
include_directories(/home/osboxes/NikAvto/workspace/reports/formatter_lib/include)
