cmake_minimum_required(VERSION 3.4)
project(solver_app)
set(CMAKE_CXX_STANDART 11)
set(CMAKE_CXX_STANDART_REQUIRED ON)
add_library(formatter STATIC /home/osboxes/NikAvto/workspace/reports/lab03/formatter_lib/formatter.cpp)
include_directories(/home/osboxes/NikAvto/workspace/reports/lab03/formatter_lib)
add_library(solver STATIC /home/osboxes/NikAvto/workspace/reports/lab03/solver_lib/solver.cpp)
include_directories(/home/osboxes/NikAvto/workspace/reports/lab03/solver_lib)
add_library(formatter_ex STATIC /home/osboxes/NikAvto/workspace/reports/lab03/formatter_ex_lib/formatter_ex.cpp)
include_directories(/home/osboxes/NikAvto/workspace/reports/lab03/formatter_ex_lib)
add_executable(solver_app /home/osboxes/NikAvto/workspace/reports/lab03/solver_application/equation.cpp)
target_link_libraries(formatter_ex formatter)
target_link_libraries(solver_app solver)
target_link_libraries(solver_app formatter_ex)

